--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,9 +1,10 @@
 name=My Android Project
 min_api_level=8
 api_level=16
-scala_version=2.10.0
+scala_version=2.10.2
 main_activity=MainActivity
 package=my.android.project
 description=Template for Android apps in Scala
 useProguard=true
 scalatest_version=1.9.1
+scaloid_version=2.1-8
